--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Divide-song</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" href="./images/logo.png">
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="icon" href="./src/images/logo.png">
   </head>
 
 
@@ -15,7 +15,7 @@
         <section>
             <div>
                 <h1>NEW DIVIDE</h1>
-                <img class="logo-img" src="./images/logo.png" alt="">
+                <img class="logo-img" src="./src/images/logo.png" alt="">
             </div>
 
             <p>Ouça agora</p>
@@ -46,10 +46,10 @@
             </nav>
         </section>
 
-        <video src="./video/video.mp4" autoplay muted loop></video>
+        <video src="./src/video/video.mp4" autoplay muted loop></video>
 
         <audio class="song" controls>
-            <source src="./music/New Divide [Official Music Video] - Linkin Park.mp3">
+            <source src="./src/music/New Divide [Official Music Video] - Linkin Park.mp3">
         </audio>
     </div>
     
